--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 8080;
 
     location / {
-        proxy_pass https://i10.qitoprivate.sitep;
+        proxy_pass https://i10.qitoprivate.site;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
